# jack-compiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  NOTES.md  README.md  vm_notes.md
scripts/: build.sh  clean.sh  test_assembler.sh  test_common.sh
src/assembler/: CMakeLists.txt  assembler.c  assembler.h  code.c  main.c  parser.c  parser.h  symbol_table.c  test.asm  utils.c
src/assembler/include/: assembler.h
src/assembler/src/: assembler.c  code-generator.c  code_generator.c  code_generator.h  config.h  instruction.h  lexer.c  lexer.h  line_processor.c  line_processor.h  main.c  parser.c  parser.h  symbol_table.c  symbol_table.h  token.c  token.h  token_table.c  token_table.h  utils.c  utils.h
src/assembler/tests/: CMakeLists.txt  test_assembler.c  test_code.c  test_code_generator.c  test_line_processor.c  test_parser.c  test_symbol_table.c  test_token.c  test_token_table.c  test_utils.c
src/assembler/tests/integration/: test_assembler.sh  test_integration.sh
src/assembler/tests/integration/test_programs/: basic_test.asm
src/assembler/tests/integration/test_programs/max/: Max.asm  max-test.lex
src/assembler/tests/integration/test_programs/pong/: pong-test.lex
src/common/: CMakeLists.txt  file_utils.c  file_utils.h
src/common/include/: file_list.h  file_utils.h  logger.h  token_table.h
src/common/src/: file_utils.c  logger.c  token_table.c
src/common/tests/: CMakeLists.txt  test_file_utils.c  test_token_table.c
src/include/: assembler.h  file_utils.h
src/vm_translator/: CMakeLists.txt
src/vm_translator/src/: main.c
tests/: CMakeLists.txt
tests/assembler/: CMakeLists.txt  test_assembler.c  test_assembler.sh  test_code.c  test_main.c  test_parser.c  test_symbol_table.c  test_utils.c
tests/assembler/test_programs/rect/: rect-test.lex
tests/common/: CMakeLists.txt  test_file_utils.c
